se extrae la logica del builder del buttonHandler, y se añade al controlador